hphp/hack/test/typecheck/shape21.php.exp
File "shape21.php", line 6, characters 23-22:
Shape field names cannot be strings enclosed by double quotes. Use single quotes instead. (Parsing[1002])
